# imageViewer2Test

./: .gitignore  compose.yaml  compose.yml
database/: compose.yml
docs/: 240812_App設計全貌.asta  240824_App設計全貌.asta  240901_Google認証.asta  240904_認証作業設計.asta  240912_アカウント作成機能設計.asta  240912_画像アップロード機能設計.asta  241003_next-auth-JWT確認.asta  hackathon.drawio  成果物.drawio
fast_api_backend/account/: .gitignore  README.md  pyproject.toml  test.db
fast_api_backend/account/src/: main.py
fast_api_backend/account/src/component/: database.py
fast_api_backend/account/src/component/common/: entity.py
fast_api_backend/account/src/component/team_allocation/: crud.py
fast_api_backend/account/src/component/user/: crud.py  models.py  schemas.py
fast_api_backend/account/src/component/users/: crud.py  models.py
fast_api_backend/account/src/component/users_/: crud.py  schemas.py
fast_api_backend/account/src/component/welcome/: team_component.py  user_component.py
fast_api_backend/account/src/config/: container.py  database.py
fast_api_backend/account/src/endpoints/: welcome.py
fast_api_backend/account/src/entity/: entity.py
fast_api_backend/account/src/entity/team_allocation/: crud.py  models.py  schemas.py
fast_api_backend/account/src/lib/: array_util.py  jwt.py
fast_api_backend/account/src/repository/: app_team.py  app_user.py  permission_allocation.py
fast_api_backend/account/src/schema/team_allocation/: schemas.py
fast_api_backend/account/src/service/: team_allocation.py  welcome_service.py
fast_api_backend/account/src/service/common/: abstract_service.py
fast_api_backend/account/tests/: conftest.py  test_app_team.py  test_app_user.py  test_jwt.py  test_permission_allocation.py  test_user.py
fast_api_backend/account/tests/config/: database.py
fast_api_backend/account/tests/jwt/: test_jwt.py
fast_api_backend/account/tests/team_allocation/repository/: test_app_team.py  test_app_user.py  test_permission_allocation.py
fast_api_backend/account/tests/team_allocation/service/: test_welcome.py
flask_backend/account/: Dockerfile  README.md  gunicorn_config.py  pyproject.toml  requirements.txt
flask_backend/account/src/: config.py  main.py
flask_backend/account/src/account/controller/: welcome_controller.py
flask_backend/account/src/tests/: base.py  sample_test.py
flask_backend/tutorial/: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
flask_backend/tutorial/src/tutorial/: __init__.py  main.py
image_viewer_app/: Dockerfile  README.md  drizzle.config.ts  jest.config.js  next.config.js  next.config.mjs  package-lock.json  package.json  run.sh  samconfig.toml  (+1 more)
sandbox/next_auth_jwt_test/python/jwe_test/: README.md  pyproject.toml
sandbox/next_auth_jwt_test/python/jwe_test/src/: note.ipynb
sandbox/next_auth_jwt_test/python/jwe_test/src/jwe_test/: __init__.py
(+82 files in other folders)
