[project]
name = "account"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "takahiro-maekawa", email = "koma4024@gmail.com" }]
dependencies = [
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "flask_cors>=5.0.0",
    "flask_testing>=0.8.1",
    "pytest>=8.3.3",
    "flask_sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "sync>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["account"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
