[project]
name = "jwe-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "takahiro-maekawa", email = "koma4024@gmail.com" }
]
dependencies = [
    "cryptography>=43.0.1",
    "python-jose>=3.3.0",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
